# colostate-omprun

./: .gitignore  LICENSE  README.md  omprun.py  pyproject.toml
docs/examples/: omprun_09262025_194521.csv
util/: omprun.py  splot.py
