[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colostate-omprun"
version = "0.1.0"
description = "Colorado State OpenMP Test Runner"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "jschott", email = "jschott515@gmail.com"},
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
omprun = "omprun:main"
